# german-legal-mcp-server

./: .gitignore  BEREIT.md  CHANGELOG.md  ENTWICKLER_NOTIZEN.md  ISSUE_TRACKER.md  KONTINUIERLICHE_ENTWICKLUNG.md  MCP_TEST.md  PROJEKT_STATUS.md  PROJEKT_ÜBERSICHT.md  README.md  TODO.md  build.bat  mcp_server.py  pyproject.toml  requirements.txt  start_server.py
config/: .env.example  claude_mcp_config.json
docs/: INSTALL.md
scripts/: create_test_db.py  diagnose.py  setup.py  simple_diagnose.py  test_runner.py  test_server.py
src/german_legal_mcp/: __init__.py  config.py  database.py  main.py  models.py  search.py  server.py  server_extension.py  server_formatting.py  utils.py
tests/: __init__.py  conftest.py  test_database.py  test_search.py  test_utils.py
