[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "german-legal-mcp-server"
version = "1.0.0"
description = "MCP Server für deutsche Rechtsprechung - Durchsuchbare juristische Datenbank mit Claude Desktop Integration"
authors = [
    {name = "MSGit1713", email = ""}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["mcp", "legal", "search", "claude", "ai", "law", "german"]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/MSGit1713/german-legal-mcp-server"
Repository = "https://github.com/MSGit1713/german-legal-mcp-server"
Issues = "https://github.com/MSGit1713/german-legal-mcp-server/issues"

[project.scripts]
german-legal-mcp = "german_legal_mcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/german_legal_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]